Implemented support for modulepath - bootstrap libs use it.
- AS_INSTALL must be absolute env option despite it can be also autodetected,
  but then it would not be possible to use it in scripts (chicken-egg problem).
- classpaths in manifests sometimes don't work on JDK11-17, not sure why
  exactly.
- Using ASADMIN_CLASSPATH to limit list of extensions - if not present, use all
  jars in the modules directory.

Signed-off-by: David Matějček <david.matejcek@omnifish.ee>